<resources>
    <string name="app_name">Workout Tracker</string>
    <string name="title_activity_workout_view">WorkoutViewActivity</string>
    <string name="exercise_name">Exercise name</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="rest_time">Rest Time</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="start_workout">START WORKOUT</string>
    <string name="set_completed">Set Completed</string>
    <string name="next_exercise">Next Exercise</string>
    <string name="workout_complete">Workout complete!</string>
    <string name="update_exercise">Update Exercise</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="title_activity_workout_list">WorkoutListActivity</string>
    <string name="workout_name">Workout Name</string>
    <string name="add_workout">Add Workout</string>
    <string name="to_workout_list">To Workout List</string>
    <string name="workout_settings">Workout Settings</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="weight">Weight</string>
    <string name="finish">Finish</string>
    <string name="update_workout">Update Workout</string>
    <string name="blank_timer">00:00</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="track_workout">Track</string>
    <string name="no_weight_data">No weight data has been collected yet!</string>
    <string name="notes">Notes</string>
    <string-array name="hamburger_drawer">
        <item>Workouts</item>
        <item>Weights</item>
        <item>Settings</item>
    </string-array>
</resources>
