<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_start_workout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.mohit31.workouttracker.activities.StartWorkoutActivity">

    <TextView
            android:id="@+id/tv_start_workout_exercise_name"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:text="@string/exercise_name"/>

    <TextView
            android:id="@+id/tv_start_workout_reps_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_start_workout_exercise_name"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/reps"/>

    <TextView
            android:id="@+id/tv_start_workout_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_start_workout_reps_sets"
            android:textSize="20sp"
            android:text="@string/rest_time"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"/>


    <TextView
            android:id="@+id/tv_start_workout_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:text="@string/blank_timer"
            android:padding="32dp"
            android:layout_below="@id/tv_start_workout_rest_time"/>

    <TextView
            android:id="@+id/tv_start_workout_sets_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_start_workout_timer"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/sets"/>

    <Button
            android:id="@+id/btn_start_workout_set_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/set_completed"
            android:layout_below="@id/tv_start_workout_sets_remaining"/>

    <Button
            android:id="@+id/btn_start_workout_next_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/next_exercise"
            android:layout_below="@id/btn_start_workout_set_completed"/>

    <TextView
            android:id="@+id/tv_start_workout_workout_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="72dp"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:text="@string/workout_complete"/>

    <Button
            android:id="@+id/btn_finish_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_start_workout_workout_completed"
            android:text="@string/finish"
            android:visibility="invisible"/>


</RelativeLayout>
