<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_edit_exercise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.mohit31.workouttracker.activities.EditExerciseActivity">

    <EditText
            android:id="@+id/et_edit_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/exercise_name"/>


    <EditText
            android:id="@+id/et_edit_exercise_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/et_edit_exercise_name"
            android:hint="@string/sets"/>

    <EditText
            android:id="@+id/et_edit_exercise_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/et_edit_exercise_name"
            android:layout_toEndOf="@id/et_edit_exercise_sets"
            android:hint="@string/reps"/>


    <EditText
            android:id="@+id/et_edit_exercise_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_edit_exercise_reps"
            android:inputType="number"
            android:hint="@string/rest_time"/>

    <EditText
            android:id="@+id/et_edit_exercise_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_edit_exercise_rest_time"
            android:inputType="numberDecimal"
            android:hint="@string/weight"
            android:paddingBottom="24dp"/>

    <Button
            android:id="@+id/btn_update_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_edit_exercise_weight"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/update_exercise"/>

    <Button
            android:id="@+id/btn_delete_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_update_exercise"
            android:layout_centerInParent="true"
            android:background="@color/red_400"
            android:textColor="@color/white"
            android:text="@string/delete_exercise"/>


</RelativeLayout>
